// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableListItem is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiSelectableListItem testClass1 testClass2"
  data-test-subj="test subject string"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon-isLoading euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props append 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon-isLoading euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
    <span
      class="euiSelectableListItem__append"
    >
      <span />
    </span>
  </span>
</button>
`;

exports[`EuiSelectableListItem props checked is off 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon--text euiIcon-isLoading euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props checked is on 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon--text euiIcon-isLoading euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props disabled 1`] = `
<button
  aria-disabled="true"
  class="euiSelectableListItem"
  disabled=""
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon-isLoading euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props isFocused 1`] = `
<button
  aria-selected="true"
  class="euiSelectableListItem euiSelectableListItem-isFocused"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon-isLoading euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props prepend 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon-isLoading euiSelectableListItem__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiSelectableListItem__prepend"
    >
      <span />
    </span>
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;

exports[`EuiSelectableListItem props showIcons can be turned off 1`] = `
<button
  class="euiSelectableListItem"
  role="option"
  type="button"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__text"
    />
  </span>
</button>
`;
